--- a/ui/templates/gameplay.html
+++ b/ui/templates/gameplay.html
@@ -1,6 +1,11 @@
 {{ define "gameplay" }}
+<script src="/static/js/button-component.js"> </script>
 
 <style>
+  * {
+    box-sizing: border-box;
+  }
+
   #container {
     display: block;
     padding: 25px;
@@ -11,80 +16,6 @@
     display: flex;
     justify-content: space-between;
     font-size: 35px;
-  }
-
-  #subcontainer {
-    padding-bottom: 15px;
-    padding-right: 20px;
-    display: block;
-    box-shadow: 5px 5px black;
-    border: 2.5px solid black;
-    justify-content: center;
-    padding-top: 20px;
-    padding-left: 20px;
-    height: 400px;
-    background-color: indianred;
-    border-radius: 10px;
-  }
-
-  form {
-    display: grid;
-    height: 325px;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-  }
-
-  label {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid black;
-    border-radius: 10px;
-    position: relative;
-    cursor: pointer;
-    background-color: white;
-  }
-
-  input[type="radio"] {
-    display: none;
-  }
-
-  label div {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    pointer-events: none;
-  }
-
-  input[type="radio"]:checked+div {
-    background-color: blue;
-    color: white;
-  }
-
-  #answer-1+div {
-    background-color: sandybrown;
-  }
-
-  #answer-2+div {
-    background-color: seagreen;
-  }
-
-  #answer-3+div {
-    background-color: orchid;
-  }
-
-  #answer-4+div {
-    background-color: steelblue;
-  }
-
-  h2 {
-    color: bisque;
-    font-size: 25px;
-    text-align: center;
   }
 </style>
 
@@ -97,37 +28,8 @@
       July 2, 2024
     </span>
   </h1>
-  <div id="subcontainer">
-    <h2>
-      What is your favorite color?
-    </h2>
-    <form>
-      <label>
-        <input type="radio" id="answer-1" name="answer" value="Blue">
-        <div id="blue-button">
-          Blue
-        </div>
-      </label>
-      <label>
-        <input type="radio" id="answer-2" name="answer" value="Green">
-        <div>
-          <span>Green</span>
-        </div>
-      </label>
-      <label>
-        <input type="radio" id="answer-3" name="answer" value="Yellow">
-        <div>
-          <span>Yellow</span>
-        </div>
-      </label>
-      <label>
-        <input type="radio" id="answer-4" name="answer" value="Purple">
-        <div>
-          <span>Purple</span>
-        </div>
-      </label>
-    </form>
-  </div>
+
+  {{ template "results" }}
 </div>
 
 {{ end }}
