--- a/ui/templates/results.html
+++ b/ui/templates/results.html
@@ -22,19 +22,21 @@
     justify-content: center;
     padding-top: 20px;
     padding-left: 20px;
-    background-color: skyblue;
+    background-color: orangered;
     border-radius: 10px;
     animation-name: slide-in-from-left;
     animation-duration: 1s;
     animation-timing-function: cubic-bezier(0.71, -0.01, 0.41, 1);
-    gap: 5px;
+    gap: 20px;
   }
 
   #vote-counts {
+    color: seagreen;
+    font-size: 25px;
+    font-family: Aruma;
     display: flex;
     flex-direction: column;
     gap: 5px;
-    border: 2px solid black;
     width: 50%;
   }
 
@@ -43,13 +45,38 @@
     justify-content: space-between;
     background-color: orange;
     border-radius: 10px;
-    padding: 10px;
-    border: 1px solid black;
+    padding: 15px;
+    border: 2.5px solid black;
   }
 
   #results-right {
     flex-grow: 1;
     border: 2px solid black;
+    padding: 10px;
+    background-color: antiquewhite;
+    border-radius: 10px;
+  }
+
+  #point-change {
+    display: block;
+    text-align: center;
+    font-size: 50px;
+  }
+
+  #rankings {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    font-size: 20px;
+  }
+
+  .ranking {
+    padding: 10px;
+    background-color: aqua;
+    border-radius: 10px;
+    display: block;
+    text-align: center;
+    border: 2px solid white;
   }
 </style>
 
@@ -97,6 +124,22 @@
 
   </div>
   <div id="results-right">
+    <span id="point-change">
+      +84
+    </span>
+    <div id="rankings">
+      <span class="ranking">
+        1. John
+      </span>
+      <span class="ranking">
+        2. Megan
+      </span>
+      <span class="ranking">
+        3. Kevin
+      </span>
+
+    </div>
+
 
   </div>
 
