--- a/ui/templates/index.html
+++ b/ui/templates/index.html
@@ -29,7 +29,7 @@
   </h1>
   <div id="buttons-container">
     <button-component>
-      <button slot="button" id="button-element" hx-get="/sign-in" hx-push-url="true" hx-swap="innerhtml"
+      <button slot="button" id="button-element" hx-get="/create-account" hx-push-url="true" hx-swap="innerhtml"
         hx-target="main">
         Create An Account
       </button>
@@ -42,10 +42,5 @@
     </button-component>
   </div>
 </div>
-<!-- <button id="sign-in-button" href="/sign-in" hx-get="/sign-in" hx-push-url="true" hx-swap="outerHTML" -->
-<!--   hx-target="#welcome-screen"> -->
-<!--   Sign In -->
-<!-- </button> -->
-<!-- <button class="jersey-15-regular" href="/create-account" hx-get="/create-account" hx-push-url="true" hx-swap="outerHTML" -->
-<!--   hx-target="#welcome-screen">Create Account</button> -->
+
 {{ end }}
