--- a/ui/templates/create-account.html
+++ b/ui/templates/create-account.html
@@ -1,24 +1,107 @@
 {{ define "create-account" }}
+
+<script src="/static/js/button-component.js"> </script>
+
+<style>
+  * {
+    font-family: Aruma;
+  }
+
+  #create-account-container {
+    color: #0e6080;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  form {
+    padding: 20px;
+    gap: 15px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: right;
+    font-size: 30px;
+  }
+
+
+  .form-item {
+    align-items: center;
+    display: flex;
+    gap: 20px;
+  }
+
+  input {
+    flex-grow: 1;
+    padding: 3px;
+    height: 30px;
+    font-size: 20px;
+    border-radius: 5px;
+    border: 2px solid #0e6080;
+    background-color: antiquewhite;
+  }
+
+  span {
+    font-size: 50px;
+    font-family: Cheto;
+  }
+
+  #photo-container {
+    background-color: snow;
+    padding: 10px;
+    border: 2px solid black;
+    border-radius: 5px;
+  }
+</style>
+
+
+
 <div id="create-account-container">
   <span id="create-account-title" class="jersey-15-regular">Create Account</span>
   <form id="create-account-form" hx-post="/create-account-submit" hx-target="#create-account-container"
     hx-swap="outerHTML" class="jersey-15-regular">
-    <div>
-      <label for="username">Username</label>
+    <div class="form-item">
+      <label for="username">
+        Username
+      </label>
       <input type="text" id="username" name="username" value={{ .Username }} required>
     </div>
-    <div>
-      <label for="password">Password</label>
+    <div class="form-item">
+      <label for="password">
+        Password
+      </label>
       <input type="password" id="password" name="password" required>
     </div>
-    <div>
-      <label for="email">Email</label>
+    <div class="form-item">
+      <label for="email">
+        Email
+      </label>
       <input type="email" id="email" name="email" value={{ .Email }} required>
     </div>
-    <div>
-      <input type="submit" value="create" class="jersey-15-regular">
+
+    <div class="form-item">
+      <label>
+        Upload Profile Photo
+      </label>
+      <div id="photo-container">
+        <img src="/static/public/blank_avatar.svg">
+      </div>
+    </div>
+    <div class="form-item">
+      <button-component>
+        <button slot="button" type="submit" value="Sign In">
+          Let's go!
+        </Button>
+      </button-component>
+
     </div>
   </form>
   <div id="create-account-error">{{ .Error }}</div>
 </div>
+
+
+
+
 {{ end }}
