--- a/ui/templates/sign-in.html
+++ b/ui/templates/sign-in.html
@@ -70,7 +70,7 @@
     <button-component>
       <button slot="button" type="submit" value="Sign In">
         Let's go!
-      </Button>
+      </button>
     </button-component>
   </form>
 </div>
