--- a/ui/templates/profile.html
+++ b/ui/templates/profile.html
@@ -66,7 +66,7 @@
 
 <div id="page-content">
   <h1 id="username-container">
-    John
+    {{ .Data.Username }}
   </h1>
   <div id="profile-subcontainer">
     <div id="user-info">
@@ -110,7 +110,7 @@
     </div>
 
     <div id="profile-photo-container">
-      <img id="profile-photo-image" src="/static/public/blank_avatar.svg">
+      <img id="profile-photo-image" src="https://ask-away.s3.us-west-1.amazonaws.com/Donuts.png">
 
     </div>
   </div>
