--- a/ui/templates/upload-profile-photo.html
+++ b/ui/templates/upload-profile-photo.html
@@ -1,20 +1,75 @@
 {{ define "upload-profile-photo"}}
-<form enctype="multipart/form-data" hx-post="/upload-profile-photo">
-  <div id="profile-photo-item">
-    <div id="profile-photo-label">
-      <label>
-        Upload Profile Photo
-      </label>
-      <input type="file" name="profileImage" accept="image/jpeg" required />
-    </div>
-    <div id="photo-container">
-      <img src="/static/public/blank_avatar.svg">
-    </div>
-    <button-component>
-      <button slot="button" type="submit"></button>
-    </button-component>
-  </div>
+<div id="page-content">
+  <style>
+    * {
+      font-family: Cheto;
+    }
 
+    span {
+      font-size: 50px;
+      font-family: Cheto;
+    }
+
+    form {
+      padding: 20px;
+      gap: 15px;
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: right;
+      font-size: 30px;
+    }
+
+    #profile-photo-item {
+      width: 100%;
+      display: flex;
+      align-items: center;
+    }
+
+    #photo-container {
+      background-color: snow;
+      padding: 10px;
+      border: 2px solid black;
+      border-radius: 5px;
+    }
+
+    #profile-photo-label {
+      padding: 10px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: start;
+    }
+
+
+    #profile-photo-label input {
+      flex-grow: 1;
+      padding: 10px;
+    }
+
+    #page-content {
+      border: 2px solid black;
+      display: block;
+      padding: 25px;
+    }
+  </style>
+  <form enctype="multipart/form-data" hx-post="/auth/upload-profile-photo" hx-target="#page-content"
+    hx-swap="innerHTML">
+    <div id="profile-photo-item">
+      <div id="profile-photo-label">
+        <label>
+          Upload Profile Photo
+        </label>
+        <input type="file" name="profileImage" accept="image/jpeg" required />
+      </div>
+      <div id="photo-container">
+        <img src="/static/public/blank_avatar.svg">
+      </div>
+      <button-component>
+        <button slot="button" type="submit"></button>
+      </button-component>
+    </div>
+</div>
 </form>
 
 {{ end }}
