pushing side-bar requests to url

--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -61,13 +61,13 @@
 <top-bar></top-bar>
 <side-bar>
   <div slot="profile" hx-trigger="click" hx-get="/auth/transition/profile" hx-target="#transition-styles"
-    hx-swap="outerHTML" class="side-bar-item">Profile
+    hx-swap="outerHTML" hx-push-url="true" class="side-bar-item">Profile
   </div>
   <div slot="games" hx-trigger="click" hx-get="/auth/transition/games" hx-target="#transition-styles"
-    hx-swap="outerHTML" class="side-bar-item">Games
+    hx-swap="outerHTML" hx-push-url="true" class="side-bar-item">Games
   </div>
   <div slot="friends" hx-trigger="click" hx-get="/auth/transition/friends" hx-target="#transition-styles"
-    hx-swap="outerHTML" class="side-bar-item">
+    hx-swap="outerHTML" hx-push-url="true" class="side-bar-item">
     Friends
   </div>
 </side-bar>
